# outpost-svd

./: CODEOWNERS  README.md  meson.build  meson.options  requirements.txt
.github/: reuse.yml
.github/workflows/: main.yml
schema/: meson.build
svd/: meson.build
svd/st/: meson.build  stm32f401.svd  stm32f405.svd  stm32f407.svd  stm32f410.svd  stm32f412.svd  stm32f413.svd  stm32f415.svd  stm32f417.svd  stm32f423.svd  stm32f427.svd  stm32f437.svd  stm32f439.svd  stm32f446.svd  stm32f469.svd  stm32f479.svd  stm32l476.svd  stm32wb55_cm4.svd
template/: irq_defs.h.in  layout.h.in  meson.build  peripheral_defs.h.in
tests/: main.c.in  meson.build
