# SPDX-License-Identifier: Apache-2.0
#
# Copyright 2023 Ledger SAS
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

svd_files += files(
    'stm32f401.svd',
    'stm32f405.svd',
    'stm32f407.svd',
    'stm32f410.svd',
    'stm32f411.svd',
    'stm32f412.svd',
    'stm32f413.svd',
    'stm32f415.svd',
    'stm32f417.svd',
    'stm32f423.svd',
    'stm32f427.svd',
    'stm32f429.svd',
    'stm32f437.svd',
    'stm32f439.svd',
    'stm32f446.svd',
    'stm32f469.svd',
    'stm32f479.svd',
    'stm32h723.svd',
    'stm32h725.svd',
    'stm32h730.svd',
    'stm32h733.svd',
    'stm32h735.svd',
    'stm32h73x.svd',
    'stm32h742.svd',
    'stm32h743.svd',
    'stm32h745_cm4.svd',
    'stm32h745_cm7.svd',
    'stm32h747_cm4.svd',
    'stm32h747_cm7.svd',
    'stm32h750.svd',
    'stm32h753.svd',
    'stm32h755_cm4.svd',
    'stm32h755_cm7.svd',
    'stm32h757_cm4.svd',
    'stm32h757_cm7.svd',
    'stm32h7a3.svd',
    'stm32h7b0.svd',
    'stm32h7b3.svd',
    'stm32l476.svd',
    'stm32u5a5.svd',
    'stm32u5a9.svd',
    'stm32u5fx.svd',
    'stm32u5gx.svd',
    'stm32u535.svd',
    'stm32u545.svd',
    'stm32u575.svd',
    'stm32u585.svd',
    'stm32u595.svd',
    'stm32u599.svd',
    'stm32wb10_cm4.svd',
    'stm32wb15_cm4.svd',
    'stm32wb30_cm4.svd',
    'stm32wb35_cm4.svd',
    'stm32wb50_cm4.svd',
    'stm32wb55_cm0p.svd',
    'stm32wb55_cm4.svd',
    'stm32wl5x_cm0p.svd',
    'stm32wl5x_cm4.svd',
    'stm32wle5_cm4.svd',
)


install_data(
  svd_files,
  install_dir : 'share/svd/st'
)
